--- a/src/styles/up.module.css
+++ b/src/styles/up.module.css
@@ -9,6 +9,7 @@
   letter-spacing: 1.5px;
   z-index: 2;
   border-radius: 50px;
+  position: absolute;
 }
 
 .upload_file_prompt {
